--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"replacement"
 	],
 	"devDependencies": {
+		"terser-webpack-plugin": "^2.1.3",
 		"webpack": "^4.41.1",
 		"webpack-cli": "^3.3.9"
 	}
