--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
     "replacement"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
-  },
-  "devDependencies": {
-    "axios": "^0.21.4",
-    "lite-server": "^2.6.1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
